# CDHMM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: macos.yml
app/: CMakeLists.txt  main.cpp
docs/: Doxyfile
include/: CDHMM.hpp  DataHandler.hpp  GMM.hpp  Kmeans.hpp  MFCC.hpp  Matrix.hpp
src/: CMakeLists.txt  my_lib.cc
tests/: CMakeLists.txt  main.cpp
